--- a/src/Components/CakeForm/CakeForm.css
+++ b/src/Components/CakeForm/CakeForm.css
@@ -6,6 +6,12 @@
     padding-top: 50px;
     padding-bottom: 40px;
   }
+
+  .cake-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   
   .form-label {
     margin-bottom: 10px;
